--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,4 @@
-/* Reset default styles for the <ul> element */
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
+
 
 /* Body styles */
 body {
@@ -15,60 +10,89 @@ body {
 }
 
 /* Header styles */
-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 2;
-  background-color: transparent;
+.Header-menu {
+  position: absolute;
+  top: 5%;
+  left: 90%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  align-items: center;
+ 
+  color: transparent;
+
+  margin: 0;
+  
   padding: 20px;
+  width: 100%;
+
+  z-index: 30;
+  
 }
 
-header a {
-  text-decoration: none;
-  color: #333;
-}
-
-header nav ul {
+.Header-menu ul {
+  display: flex;
+  align-items: center;
+  
+  top: 40px;
+  
+  
   display: flex;
 }
 
-header nav ul li {
-  margin-right: 20px;
+.Header-menu ul li {
+ 
+  padding-left: 25px;
+  align-items: left;
+  
+  
+  text-decoration: none;
+  z-index: 30;
+  
+}
+
+.Header-menu ul li a {
+  color: white;
+  text-decoration: none;
+  font-size: 14px;
+  
 }
 
 /* Video background styles */
-.video-background {
-  position: relative; /* Change to relative positioning */
-  width: 100%;
-  height: 0; /* Change to 0 */
-  padding-top: 140%; /* Add padding-top with aspect ratio (16:9) for responsive video height */
-}
-
-.video-background video {
-  position: absolute;
+.video-container {
+  position: relative;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100vh;
-  object-fit: cover;
+  width: 100vw;
+  height: 100%;
+  overflow: hidden;
+  z-index: 2;
+}
+
+.video-container video {
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+}
+
+.content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  text-align: center;
+  z-index: 10;
 }
 
 /* Content styles */
-#app {
-  flex-grow: 1; /* Use flex-grow to make the content expand to fill remaining space */
-  padding: 20px;
-  text-align: center;
-}
-
-/* Footer styles */
-footer {
-  background-color: #000;
-  color: #fff;
-  padding: 20px;
-}
 .latin-text {
+  margin-top: auto;
   font-size: 20px; /* Adjust the font size as needed */
 }
 
@@ -78,8 +102,9 @@ footer {
 }
 
 .latin-text p {
-  margin-bottom: 10px;
-  margin-top: auto;
+ 
+
+  color: black;
 }
 
 .article {
@@ -88,6 +113,7 @@ footer {
   margin-bottom: 20px;
   border-radius: 4px;
 }
+
 .article h2 {
   font-size: 24px;
   margin-bottom: 10px;
@@ -96,4 +122,48 @@ footer {
 .article p {
   font-size: 16px;
   line-height: 1.5;
+}
+
+/* Footer styles */
+footer {
+  background-color: #000;
+  color: #fff;
+  padding: 20px;
+  z-index: 20;
+}
+
+.footer-menu ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer-menu li {
+  margin-right: 20px;
+}
+
+.footer-menu li:last-child {
+  margin-right: 0;
+}
+
+.footer-menu a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.footer-social {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.footer-social a {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.footer-social a:last-child {
+  margin-right: 0;
 }
