--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body {
 
 .Header-menu ul li {
  
-  padding-left: 25px;
+  padding-left: 40px;
   align-items: left;
   
   
@@ -56,14 +56,23 @@ body {
   font-size: 14px;
   
 }
+.logo{
+position: absolute;
+top: 20px;
+left: 18px;
+z-index: 20;}
 
+.logo img{
+width: 100px;
+height: auto;
+z-index: 40;}
 /* Video background styles */
 .video-container {
   position: relative;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100%;
+  width: 100%;
+  height: 100vh;
   overflow: hidden;
   z-index: 2;
 }
@@ -166,4 +175,40 @@ footer {
 
 .footer-social a:last-child {
   margin-right: 0;
+}
+.Header-menu {
+  display: block;
+}
+
+@media (max-width: 500px) { /* Adjust the maximum width for mobile devices */
+  .Header-menu {
+      display: none;
+  }
+}
+.Header-menu ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.Header-menu li {
+  display: inline-block;
+  margin-right: 20px;
+  position: relative;
+  cursor: pointer;
+}
+
+.Header-menu li a {
+  text-decoration: none;
+}
+
+.Header-menu li.active::after {
+  content: "";
+  position: absolute;
+  left: 20px;
+  
+  bottom: -10px;
+  width: 100%;
+  height: 4px;
+  background-color: white; /* Adjust the underline color */
 }
