--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,16 @@ z-index: 40;}
 .latin-text {
   margin-top: auto;
   font-size: 20px; /* Adjust the font size as needed */
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s linear 0.5s, opacity 0.5s linear;
+  
+
+}
+
+.latin-text.show {
+  visibility: visible;
+  opacity:1;
 }
 
 .latin-text h1 {
@@ -158,7 +168,7 @@ footer {
 }
 
 .footer-menu a {
-  color: #fff;
+ color: white;
   text-decoration: none;
 }
 
@@ -171,6 +181,7 @@ footer {
 .footer-social a {
   display: inline-block;
   margin-right: 10px;
+  color: white;
 }
 
 .footer-social a:last-child {
@@ -211,4 +222,35 @@ footer {
   width: 100%;
   height: 4px;
   background-color: white; /* Adjust the underline color */
+}
+#toggleButton {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 9999;
+}
+
+header, article {
+  display: block;
+}
+
+footer {
+  background-color: black;
+  color: white;
+  padding: 10px;
+}
+
+.footer-visible header, .footer-visible article {
+  display: none;
+}
+
+.footer-visible footer {
+  background-color: white;
+  color: black;
+}
+.footer-visible .footer-menu a {
+  color: black;
+}
+.footer-visible .footer-social a {
+  color: black;
 }
