--- a/styles.css
+++ b/styles.css
@@ -286,10 +286,11 @@ footer {
 }
 
   /* CSS for the image */
-  .blank-space {
+  .container {
     position: relative;
-    width: 200px;
-    height: 200px;
+    background-color: white;
+    width: 100%;
+    height: 700px;
     margin: 0 auto;
     overflow: hidden;
   }
@@ -297,13 +298,23 @@ footer {
   /* CSS for the moving image */
   #moving-image {
     position: absolute;
-    top: 95;
-    left: 5;
-    width: 20%;
-    height: 20%;
+    top: 60%;
+    left: 40%;
+    width: 300px;
+    height: 300px;
     background-image: url('image1.jpg');
     background-size: cover;
-    transition: transform 0.3s ease-out;
-    transform: translate(0, 0);
+    transition: transform easy 1s;
+    transform: translate(-50%, 0);
+    z-index: 100;
+  }
+  #static-image{
+    position: absolute;
+    top:10%;
+    bottom: 10%;
+    left:50%;
+    width: 500px;
+    height: 450px;
+    background-image: url('image1.jpg');
     z-index: 90;
   }
