--- a/index.erb
+++ b/index.erb
@@ -9,8 +9,8 @@
 
 </head>
 <body>
-<button id="toggleButton">Toggle Footer</button>
-<div class="logo">
+<button id="toggleButton"></button>
+<div class="logo"><a href="/contact"></a>
 <img src="logo.jpg" type="logo">
 </div>
 <header>
@@ -27,7 +27,7 @@
   <div class="Header-menu">
     <ul>
       <li><a href="#">How We Teach</a></li>
-      <li><a href="#">Contact Us</a></li>
+      <li><a href="/contact">Contact Us</a></li>
       <li><a href="#">Prices</a></li>
       <li><a href="#">Availability</a></li>
     </ul>
@@ -57,7 +57,7 @@
     <div class="footer-menu">
       <ul>
         <li><a href="#">How We Teach</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href='/contact'>Contact Us</a></li>
         <li><a href="#">Prices</a></li>
         <li><a href="#">Availability</a></li>
       </ul>
